--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
                 <div class="calendar-days hidden">
                 </div>
                 <div class="calendar-days">
-                    <div class="days-number">01</div>
+                    <div class="days-number over">01</div>
                     <div class="calendar-games">
                         <img src="assets/images/little-nightmares.png" />
                     </div>
                 </div>
                 <div class="calendar-days">
-                    <div class="days-number">02</div>
+                    <div class="days-number over">02</div>
                     <div class="calendar-games">
                         <img src="assets/images/little-nightmares-2.png" />
                     </div>
@@ -42,7 +42,7 @@
                 <div class="calendar-days">
                     <div class="days-number">03</div>
                     <div class="calendar-games">
-                        <img src="assets/images/little-nightmares-2.png" />
+                        <img src="assets/images/tormented-souls.png" />
                     </div>
                 </div>
                 <div class="calendar-days">
@@ -54,25 +54,25 @@
                 <div class="calendar-days">
                     <div class="days-number">05</div>
                     <div class="calendar-games">
-                        <img src="assets/images/tormented-souls.png" />
+                        <img src="assets/images/daymare-1998.png" />
                     </div>
                 </div>
                 <div class="calendar-days">
                     <div class="days-number">06</div>
                     <div class="calendar-games">
-                        <img src="assets/images/tormented-souls.png" />
+                        <img src="assets/images/daymare-1998.png" />
                     </div>
                 </div>
                 <div class="calendar-days">
                     <div class="days-number">07</div>
                     <div class="calendar-games">
-                        <img src="assets/images/tormented-souls.png" />
+                        <img src="assets/images/daymare-1994.png" />
                     </div>
                 </div>
                 <div class="calendar-days">
                     <div class="days-number">08</div>
                     <div class="calendar-games">
-                        <img src="assets/images/silent-hill-2.png" />
+                        <img src="assets/images/daymare-1994.png" />
                     </div>
                 </div>
                 <div class="calendar-days">
@@ -120,7 +120,7 @@
                 <div class="calendar-days">
                     <div class="days-number">16</div>
                     <div class="calendar-games">
-                        <img src="assets/images/alan-wake.png" />
+                        <img src="assets/images/alan-wake-2.png" />
                     </div>
                 </div>
                 <div class="calendar-days">
@@ -144,31 +144,31 @@
                 <div class="calendar-days">
                     <div class="days-number">20</div>
                     <div class="calendar-games">
-                        <img src="assets/images/alan-wake-2.png" />
+                        <img src="assets/images/the-evil-within.png" />
                     </div>
                 </div>
                 <div class="calendar-days">
                     <div class="days-number">21</div>
                     <div class="calendar-games">
-                        <img src="assets/images/alan-wake-2.png" />
+                        <img src="assets/images/the-evil-within.png" />
                     </div>
                 </div>
                 <div class="calendar-days">
                     <div class="days-number">22</div>
                     <div class="calendar-games">
-                        <img src="assets/images/alan-wake-2.png" />
+                        <img src="assets/images/the-evil-within-2.png" />
                     </div>
                 </div>
                 <div class="calendar-days">
                     <div class="days-number">23</div>
                     <div class="calendar-games">
-                        <img src="assets/images/daymare-1998.png" />
+                        <img src="assets/images/the-evil-within-2.png" />
                     </div>
                 </div>
                 <div class="calendar-days">
                     <div class="days-number">24</div>
                     <div class="calendar-games">
-                        <img src="assets/images/daymare-1998.png" />
+                        <img src="assets/images/dead-space.png" />
                     </div>
                 </div>
                 <div class="calendar-days">
@@ -180,13 +180,13 @@
                 <div class="calendar-days">
                     <div class="days-number">26</div>
                     <div class="calendar-games">
-                        <img src="assets/images/daymare-1994.png" />
+                        <img src="assets/images/dead-space.png" />
                     </div>
                 </div>
                 <div class="calendar-days">
                     <div class="days-number">27</div>
                     <div class="calendar-games">
-                        <img src="assets/images/daymare-1994.png" />
+                        <img src="assets/images/dead-space.png" />
                     </div>
                 </div>
                 <div class="calendar-days">
