--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     </div>
                 </div>
                 <div class="calendar-days">
-                    <div class="days-number">03</div>
+                    <div class="days-number over">03</div>
                     <div class="calendar-games">
                         <img src="assets/images/tormented-souls.png" />
                     </div>
@@ -54,7 +54,7 @@
                 <div class="calendar-days">
                     <div class="days-number">05</div>
                     <div class="calendar-games">
-                        <img src="assets/images/daymare-1998.png" />
+                        <img src="assets/images/tormented-souls.png" />
                     </div>
                 </div>
                 <div class="calendar-days">
@@ -66,13 +66,13 @@
                 <div class="calendar-days">
                     <div class="days-number">07</div>
                     <div class="calendar-games">
-                        <img src="assets/images/daymare-1994.png" />
+                        <img src="assets/images/daymare-1998.png" />
                     </div>
                 </div>
                 <div class="calendar-days">
                     <div class="days-number">08</div>
                     <div class="calendar-games">
-                        <img src="assets/images/daymare-1994.png" />
+                        <img src="assets/images/silent-hill-2.png" />
                     </div>
                 </div>
                 <div class="calendar-days">
@@ -96,13 +96,13 @@
                 <div class="calendar-days">
                     <div class="days-number">12</div>
                     <div class="calendar-games">
-                        <img src="assets/images/silent-hill-2.png" />
+                        <img src="assets/images/daymare-1994.png" />
                     </div>
                 </div>
                 <div class="calendar-days">
                     <div class="days-number">13</div>
                     <div class="calendar-games">
-                        <img src="assets/images/silent-hill-2.png" />
+                        <img src="assets/images/daymare-1994.png" />
                     </div>
                 </div>
                 <div class="calendar-days">
