--- a/index.html
+++ b/index.html
@@ -96,31 +96,31 @@
                 <div class="calendar-days">
                     <div class="days-number">12</div>
                     <div class="calendar-games">
-                        <img src="assets/images/silent-hill-2.png.png" />
+                        <img src="assets/images/silent-hill-2.png" />
                     </div>
                 </div>
                 <div class="calendar-days">
                     <div class="days-number">13</div>
                     <div class="calendar-games">
-                        <img src="assets/images/silent-hill-2.png.png" />
+                        <img src="assets/images/silent-hill-2.png" />
                     </div>
                 </div>
                 <div class="calendar-days">
                     <div class="days-number">14</div>
                     <div class="calendar-games">
-                        <img src="assets/images/silent-hill-2.png.png" />
+                        <img src="assets/images/silent-hill-2.png" />
                     </div>
                 </div>
                 <div class="calendar-days">
                     <div class="days-number">15</div>
                     <div class="calendar-games">
-                        <img src="assets/images/daymare-1994.png.png.png" />
+                        <img src="assets/images/daymare-1994.png" />
                     </div>
                 </div>
                 <div class="calendar-days">
                     <div class="days-number">16</div>
                     <div class="calendar-games">
-                        <img src="assets/images/daymare-1994.png.png" />
+                        <img src="assets/images/daymare-1994.png" />
                     </div>
                 </div>
                 <div class="calendar-days">
@@ -144,25 +144,25 @@
                 <div class="calendar-days">
                     <div class="days-number">20</div>
                     <div class="calendar-games">
-                        <img src="assets/images/alan-wake-2.png.png" />
+                        <img src="assets/images/alan-wake-2.png" />
                     </div>
                 </div>
                 <div class="calendar-days">
                     <div class="days-number">21</div>
                     <div class="calendar-games">
-                        <img src="assets/images/alan-wake-2.png.png" />
+                        <img src="assets/images/alan-wake-2.png" />
                     </div>
                 </div>
                 <div class="calendar-days">
                     <div class="days-number">22</div>
                     <div class="calendar-games">
-                        <img src="assets/images/alan-wake-2.png.png" />
+                        <img src="assets/images/alan-wake-2.png" />
                     </div>
                 </div>
                 <div class="calendar-days">
                     <div class="days-number">23</div>
                     <div class="calendar-games">
-                        <img src="assets/images/dead-space.png.png" />
+                        <img src="assets/images/dead-space.png" />
                     </div>
                 </div>
                 <div class="calendar-days">
@@ -186,31 +186,31 @@
                 <div class="calendar-days">
                     <div class="days-number">27</div>
                     <div class="calendar-games">
-                        <img src="assets/images/the-evil-within.png.png" />
+                        <img src="assets/images/the-evil-within.png" />
                     </div>
                 </div>
                 <div class="calendar-days">
                     <div class="days-number">28</div>
                     <div class="calendar-games">
-                        <img src="assets/images/the-evil-within.png.png" />
+                        <img src="assets/images/the-evil-within.png" />
                     </div>
                 </div>
                 <div class="calendar-days">
                     <div class="days-number">29</div>
                     <div class="calendar-games">
-                        <img src="assets/images/the-evil-within-2.png.png" />
+                        <img src="assets/images/the-evil-within-2.png" />
                     </div>
                 </div>
                 <div class="calendar-days">
                     <div class="days-number">30</div>
                     <div class="calendar-games">
-                        <img src="assets/images/the-evil-within-2.png.png" />
+                        <img src="assets/images/the-evil-within-2.png" />
                     </div>
                 </div>
                 <div class="calendar-days">
                     <div class="days-number">31</div>
                     <div class="calendar-games">
-                        <img src="assets/images/the-evil-within-2.png.png" />
+                        <img src="assets/images/the-evil-within-2.png" />
                     </div>
                 </div>
                 <div class="calendar-days hidden">
