Fixed for the 8th

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 <div class="calendar-days">
                     <div class="days-number">08</div>
                     <div class="calendar-games">
-                        <img src="assets/images/daymare-1998.png.png" />
+                        <img src="assets/images/daymare-1998.png" />
                     </div>
                 </div>
                 <div class="calendar-days">
