Set days as "over"

--- a/index.html
+++ b/index.html
@@ -46,72 +46,72 @@
                     </div>
                 </div>
                 <div class="calendar-days">
-                    <div class="days-number">04</div>
+                    <div class="days-number over">04</div>
                     <div class="calendar-games">
                         <img src="assets/images/resident-evil-5.png" />
                     </div>
                 </div>
-                <div class="calendar-days">
+                <div class="calendar-days over">
                     <div class="days-number">05</div>
                     <div class="calendar-games">
                         <img src="assets/images/tormented-souls.png" />
                     </div>
                 </div>
-                <div class="calendar-days">
+                <div class="calendar-days over">
                     <div class="days-number">06</div>
                     <div class="calendar-games">
                         <img src="assets/images/daymare-1998.png" />
                     </div>
                 </div>
-                <div class="calendar-days">
+                <div class="calendar-days over">
                     <div class="days-number">07</div>
                     <div class="calendar-games">
                         <img src="assets/images/daymare-1998.png" />
                     </div>
                 </div>
-                <div class="calendar-days">
+                <div class="calendar-days over">
                     <div class="days-number">08</div>
                     <div class="calendar-games">
                         <img src="assets/images/daymare-1998.png" />
                     </div>
                 </div>
-                <div class="calendar-days">
+                <div class="calendar-days over">
                     <div class="days-number">09</div>
                     <div class="calendar-games">
                         <img src="assets/images/silent-hill-2.png" />
                     </div>
                 </div>
-                <div class="calendar-days">
+                <div class="calendar-days over">
                     <div class="days-number">10</div>
                     <div class="calendar-games">
                         <img src="assets/images/silent-hill-2.png" />
                     </div>
                 </div>
-                <div class="calendar-days">
+                <div class="calendar-days over">
                     <div class="days-number">11</div>
                     <div class="calendar-games">
                         <img src="assets/images/resident-evil-revelations-2.png" />
                     </div>
                 </div>
-                <div class="calendar-days">
+                <div class="calendar-days over">
                     <div class="days-number">12</div>
                     <div class="calendar-games">
                         <img src="assets/images/silent-hill-2.png" />
                     </div>
                 </div>
-                <div class="calendar-days">
+                <div class="calendar-days over">
                     <div class="days-number">13</div>
                     <div class="calendar-games">
                         <img src="assets/images/silent-hill-2.png" />
                     </div>
                 </div>
-                <div class="calendar-days">
+                <div class="calendar-days over">
                     <div class="days-number">14</div>
                     <div class="calendar-games">
                         <img src="assets/images/silent-hill-2.png" />
                     </div>
                 </div>
-                <div class="calendar-days">
+                <div class="calendar-days over">
                     <div class="days-number">15</div>
                     <div class="calendar-games">
                         <img src="assets/images/daymare-1994.png" />
