--- a/index.html
+++ b/index.html
@@ -51,74 +51,74 @@
                         <img src="assets/images/resident-evil-5.png" />
                     </div>
                 </div>
-                <div class="calendar-days over">
-                    <div class="days-number">05</div>
+                <div class="calendar-days">
+                    <div class="days-number over">05</div>
                     <div class="calendar-games">
                         <img src="assets/images/tormented-souls.png" />
                     </div>
                 </div>
-                <div class="calendar-days over">
-                    <div class="days-number">06</div>
+                <div class="calendar-days">
+                    <div class="days-number over">06</div>
                     <div class="calendar-games">
                         <img src="assets/images/daymare-1998.png" />
                     </div>
                 </div>
-                <div class="calendar-days over">
-                    <div class="days-number">07</div>
+                <div class="calendar-days">
+                    <div class="days-number over">07</div>
                     <div class="calendar-games">
                         <img src="assets/images/daymare-1998.png" />
                     </div>
                 </div>
-                <div class="calendar-days over">
-                    <div class="days-number">08</div>
+                <div class="calendar-days">
+                    <div class="days-number over">08</div>
                     <div class="calendar-games">
                         <img src="assets/images/daymare-1998.png" />
                     </div>
                 </div>
-                <div class="calendar-days over">
-                    <div class="days-number">09</div>
+                <div class="calendar-days">
+                    <div class="days-number over">09</div>
                     <div class="calendar-games">
                         <img src="assets/images/silent-hill-2.png" />
                     </div>
                 </div>
-                <div class="calendar-days over">
-                    <div class="days-number">10</div>
+                <div class="calendar-days">
+                    <div class="days-number over">10</div>
                     <div class="calendar-games">
                         <img src="assets/images/silent-hill-2.png" />
                     </div>
                 </div>
-                <div class="calendar-days over">
-                    <div class="days-number">11</div>
+                <div class="calendar-days">
+                    <div class="days-number over">11</div>
                     <div class="calendar-games">
                         <img src="assets/images/resident-evil-revelations-2.png" />
                     </div>
                 </div>
-                <div class="calendar-days over">
-                    <div class="days-number">12</div>
+                <div class="calendar-days">
+                    <div class="days-number over">12</div>
                     <div class="calendar-games">
                         <img src="assets/images/silent-hill-2.png" />
                     </div>
                 </div>
-                <div class="calendar-days over">
-                    <div class="days-number">13</div>
+                <div class="calendar-days">
+                    <div class="days-number over">13</div>
                     <div class="calendar-games">
                         <img src="assets/images/silent-hill-2.png" />
                     </div>
                 </div>
-                <div class="calendar-days over">
-                    <div class="days-number">14</div>
+                <div class="calendar-days">
+                    <div class="days-number over">14</div>
                     <div class="calendar-games">
                         <img src="assets/images/silent-hill-2.png" />
                     </div>
                 </div>
-                <div class="calendar-days over">
-                    <div class="days-number">15</div>
+                <div class="calendar-days">
+                    <div class="days-number over">15</div>
                     <div class="calendar-games">
                         <img src="assets/images/daymare-1994.png" />
                     </div>
                 </div>
                 <div class="calendar-days">
-                    <div class="days-number">16</div>
+                    <div class="days-number over">16</div>
                     <div class="calendar-games">
                         <img src="assets/images/daymare-1994.png" />
                     </div>
@@ -126,7 +126,7 @@
                 <div class="calendar-days">
                     <div class="days-number">17</div>
                     <div class="calendar-games">
-                        <img src="assets/images/alan-wake.png" />
+                        <img src="assets/images/dead-space.png" />
                     </div>
                 </div>
                 <div class="calendar-days">
@@ -138,37 +138,37 @@
                 <div class="calendar-days">
                     <div class="days-number">19</div>
                     <div class="calendar-games">
-                        <img src="assets/images/alan-wake.png" />
+                        <img src="assets/images/dead-space.png" />
                     </div>
                 </div>
                 <div class="calendar-days">
                     <div class="days-number">20</div>
                     <div class="calendar-games">
-                        <img src="assets/images/alan-wake-2.png" />
+                        <img src="assets/images/dead-space.png" />
                     </div>
                 </div>
                 <div class="calendar-days">
                     <div class="days-number">21</div>
                     <div class="calendar-games">
-                        <img src="assets/images/alan-wake-2.png" />
+                        <img src="assets/images/alan-wake.png" />
                     </div>
                 </div>
                 <div class="calendar-days">
                     <div class="days-number">22</div>
                     <div class="calendar-games">
-                        <img src="assets/images/alan-wake-2.png" />
+                        <img src="assets/images/alan-wake.png" />
                     </div>
                 </div>
                 <div class="calendar-days">
                     <div class="days-number">23</div>
                     <div class="calendar-games">
-                        <img src="assets/images/dead-space.png" />
+                        <img src="assets/images/alan-wake-2.png" />
                     </div>
                 </div>
                 <div class="calendar-days">
                     <div class="days-number">24</div>
                     <div class="calendar-games">
-                        <img src="assets/images/dead-space.png" />
+                        <img src="assets/images/alan-wake-2.png" />
                     </div>
                 </div>
                 <div class="calendar-days">
@@ -180,7 +180,7 @@
                 <div class="calendar-days">
                     <div class="days-number">26</div>
                     <div class="calendar-games">
-                        <img src="assets/images/dead-space.png" />
+                        <img src="assets/images/alan-wake-2.png" />
                     </div>
                 </div>
                 <div class="calendar-days">
