Switched between TEW and Alan Wake

--- a/index.html
+++ b/index.html
@@ -150,25 +150,25 @@
                 <div class="calendar-days">
                     <div class="days-number">21</div>
                     <div class="calendar-games">
-                        <img src="assets/images/alan-wake.png" />
+                        <img src="assets/images/the-evil-within.png" />
                     </div>
                 </div>
                 <div class="calendar-days">
                     <div class="days-number">22</div>
                     <div class="calendar-games">
-                        <img src="assets/images/alan-wake.png" />
+                        <img src="assets/images/the-evil-within.png" />
                     </div>
                 </div>
                 <div class="calendar-days">
                     <div class="days-number">23</div>
                     <div class="calendar-games">
-                        <img src="assets/images/alan-wake-2.png" />
+                        <img src="assets/images/the-evil-within-2.png" />
                     </div>
                 </div>
                 <div class="calendar-days">
                     <div class="days-number">24</div>
                     <div class="calendar-games">
-                        <img src="assets/images/alan-wake-2.png" />
+                        <img src="assets/images/the-evil-within-2.png" />
                     </div>
                 </div>
                 <div class="calendar-days">
@@ -180,37 +180,37 @@
                 <div class="calendar-days">
                     <div class="days-number">26</div>
                     <div class="calendar-games">
-                        <img src="assets/images/alan-wake-2.png" />
+                        <img src="assets/images/alan-wake.png" />
                     </div>
                 </div>
                 <div class="calendar-days">
                     <div class="days-number">27</div>
                     <div class="calendar-games">
-                        <img src="assets/images/the-evil-within.png" />
+                        <img src="assets/images/alan-wake.png.png" />
                     </div>
                 </div>
                 <div class="calendar-days">
                     <div class="days-number">28</div>
                     <div class="calendar-games">
-                        <img src="assets/images/the-evil-within.png" />
+                        <img src="assets/images/alan-wake.png.png" />
                     </div>
                 </div>
                 <div class="calendar-days">
                     <div class="days-number">29</div>
                     <div class="calendar-games">
-                        <img src="assets/images/the-evil-within-2.png" />
+                        <img src="assets/images/alan-wake-2.png.png" />
                     </div>
                 </div>
                 <div class="calendar-days">
                     <div class="days-number">30</div>
                     <div class="calendar-games">
-                        <img src="assets/images/the-evil-within-2.png" />
+                        <img src="assets/images/alan-wake-2.png.png" />
                     </div>
                 </div>
                 <div class="calendar-days">
                     <div class="days-number">31</div>
                     <div class="calendar-games">
-                        <img src="assets/images/the-evil-within-2.png" />
+                        <img src="assets/images/alan-wake-2.png" />
                     </div>
                 </div>
                 <div class="calendar-days hidden">
