Switched between TEW and Alan Wake + days over

--- a/index.html
+++ b/index.html
@@ -124,25 +124,25 @@
                     </div>
                 </div>
                 <div class="calendar-days">
-                    <div class="days-number">17</div>
+                    <div class="days-number over">17</div>
                     <div class="calendar-games">
                         <img src="assets/images/dead-space.png" />
                     </div>
                 </div>
                 <div class="calendar-days">
-                    <div class="days-number">18</div>
+                    <div class="days-number over">18</div>
                     <div class="calendar-games">
                         <img src="assets/images/resident-evil-revelations-2.png" />
                     </div>
                 </div>
                 <div class="calendar-days">
-                    <div class="days-number">19</div>
+                    <div class="days-number over">19</div>
                     <div class="calendar-games">
                         <img src="assets/images/dead-space.png" />
                     </div>
                 </div>
                 <div class="calendar-days">
-                    <div class="days-number">20</div>
+                    <div class="days-number over">20</div>
                     <div class="calendar-games">
                         <img src="assets/images/dead-space.png" />
                     </div>
