--- a/index.html
+++ b/index.html
@@ -186,25 +186,25 @@
                 <div class="calendar-days">
                     <div class="days-number">27</div>
                     <div class="calendar-games">
-                        <img src="assets/images/alan-wake.png.png" />
+                        <img src="assets/images/alan-wake.png" />
                     </div>
                 </div>
                 <div class="calendar-days">
                     <div class="days-number">28</div>
                     <div class="calendar-games">
-                        <img src="assets/images/alan-wake.png.png" />
+                        <img src="assets/images/alan-wake.png" />
                     </div>
                 </div>
                 <div class="calendar-days">
                     <div class="days-number">29</div>
                     <div class="calendar-games">
-                        <img src="assets/images/alan-wake-2.png.png" />
+                        <img src="assets/images/alan-wake-2.png" />
                     </div>
                 </div>
                 <div class="calendar-days">
                     <div class="days-number">30</div>
                     <div class="calendar-games">
-                        <img src="assets/images/alan-wake-2.png.png" />
+                        <img src="assets/images/alan-wake-2.png" />
                     </div>
                 </div>
                 <div class="calendar-days">
